name: KaryCode
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
copyright: Copyright 2018-present by Pouya Kary
maintainer: Pouya Kary
stability: experimental
homepage: https://github.com/pmkary/kary-code
category: cryptography
author: Pouya Kary
x-ghc-framework-version: 8.0.2-9.6-1
x-last-ide-version: HfM1.6.0

executable KaryCode
    main-is: Main.hs
    build-depends:
        base -any,
        split -any
    default-language: Haskell2010
    other-modules:
        Commons
        Decode
        Encode

